<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_sign_up">

    <TextView
        android:id="@+id/tvHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_20dp"
        android:text="@string/label_text_view_sign_up"
        android:textAllCaps="true"
        android:textColor="@color/color_orange"
        android:textSize="@dimen/size_22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/size_40dp"
        android:layout_marginTop="@dimen/size_40dp"
        android:background="@drawable/bg_edit_text"
        android:hint="@string/label_edit_text_email"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:paddingHorizontal="@dimen/size_12dp"
        android:paddingVertical="@dimen/size_12dp"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvHeader" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/size_40dp"
        android:layout_marginTop="@dimen/size_40dp"
        android:background="@drawable/bg_edit_text"
        android:hint="@string/label_edit_text_password"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:paddingHorizontal="@dimen/size_12dp"
        android:paddingVertical="@dimen/size_12dp"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtEmail" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSignUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/size_64dp"
        android:layout_marginTop="@dimen/size_40dp"
        android:background="@drawable/bg_button"
        android:text="@string/label_button_sign_up"
        android:textColor="@color/white"
        android:textSize="@dimen/size_16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>
